welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:1: error: Missing closing brace `}' assumed here
def faireV(){ 
^PictureMono3:1: error: expected class or object definition
def faireV(){ 
^PictureMono3:17: error: expected start of definition
override def run() {
         ^