welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
def faireV(){ 
  avance(2);
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
  recule();
  droite();
  avance();
    baisseBrosse();
  leveBrosse();
    avance(2)}
    
override def run() {
  
  

	
def faire_un_patern()
  {for (i <-0 to 3)
  
{faireV(); 
 gauche();}}
  
def_faire_ligne(){
  for(i<-0 to 8){
  faire_un_patern()
    avance(7)}
  
}